src/objects/CourseArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resource Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course At-a-Glance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FileUpload__c</fullName>
        <label>File Upload</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>InternalTagging__c</fullName>
        <inlineHelpText>This is used to add terms that might not be included in the body the article but student still might search.
Text in here will be searchable but will NOT be displayed to the student.</inlineHelpText>
        <label>Internal Tagging</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RichTextArea__c</fullName>
        <label>Rich Text Area</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Edit</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Publish</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for Publish</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course Article</label>
    <pluralLabel>Course Articles</pluralLabel>
</CustomObject>